# algo-asggoups-v3

./: 01_PROJECT_UNDERSTANDING.md  02_CODE_QUALITY_REPORT.md  03_PRODUCTION_READINESS_REPORT.md  04_FEATURE_VERIFICATION_MATRIX.md  05_MASTER_AUDIT_REPORT.md  AUDIT_REPORT_TASK_008.md  ERROR_HANDLING_NOTES.md  FINAL_100_PERCENT_COMPLETE_REPORT.md  HEADER_IMPLEMENTATION_NOTES.md  IMPLEMENTATION_NOTES.md  JULES_AI_FORCE_FIX_GIT.txt  JULES_AI_GIT_CONFLICT_RESOLUTION.txt  JULES_AI_START_PROMPT.txt  JULES_AI_TASK_001_CODEBASE_AUDIT.md  JULES_AI_TASK_002_START_PROMPT.txt  JULES_AI_TASK_002_V5_TELEGRAM_MENU.md  JULES_AI_TASK_003_START_PROMPT.txt  JULES_AI_TASK_003_STICKY_HEADER.md  JULES_AI_TASK_004_PLUGIN_ARCHITECTURE.md  JULES_AI_TASK_004_START_PROMPT.txt  JULES_AI_TASK_005_START_PROMPT.txt  JULES_AI_TASK_005_ZERO_TYPING.md  JULES_AI_TASK_006_ERROR_HANDLING.md  JULES_AI_TASK_006_START_PROMPT.txt  JULES_AI_TASK_007_MIGRATION.md  JULES_AI_TASK_007_START_PROMPT.txt  JULES_AI_TASK_008_START_PROMPT.txt  JULES_AI_TASK_008_VERIFICATION.md  JULES_AI_TASK_009_COMPLETE_HANDLERS.md  JULES_AI_TASK_009_START_PROMPT.txt  JULES_ANALYSIS_REPORT_20260121.md  JULES_IMPLEMENTATION_COMPLETE.md  JULES_IMPLEMENTATION_TASK.md  JULES_TASK_SUMMARY_HINGLISH.md  LIVE_GUIDE.md  MENU_STRUCTURE.md  MIGRATION_LOG.md  PHASE_1_BRIDGE_LEGACY_TO_V5_TEST_REPORT.md  PHASE_2_COMMAND_FLOWS_TEST_REPORT.md  PHASE_2_CRITICAL_COMMANDS_TEST_REPORT.md  (+13 more)
ZepixTradingBot-old-v2-main/Trading_Bot/: .env.example  .gitignore  .pre-commit-config.yaml  35_UPDATE_FILES_IMPLEMENTATION_PLAN.json  ARCHITECTURE_DECISION_REQUIRED.md  COMPLETE_IMPLEMENTATION_CODE.txt  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_IMPLEMENTATION_VERIFICATION.md  DATABASE_REALITY_REPORT.py  ERROR_HANDLING_IMPLEMENTATION_REPORT.md  ERROR_HANDLING_VERIFICATION_RESULT.txt  FINAL_35_FILES_VERIFICATION.py  FINAL_DATABASE_TEST.py  INTEGRATION_GUIDE.md  MENU_BUTTON_IMPLEMENTATION_REPORT.md  ORGANIZATION_COMPLETE.py  PHASES_4_5_6_IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE.md  README.md  REALITY_CHECK_REPORT.md  ROADMAP.md  ROADMAP_VS_REALITY_REPORT.md  START_BOT.bat  TELEGRAM_COMMANDS_PREVIEW.py  TELEGRAM_VERIFICATION_CERTIFICATE.json  analyze_35_update_files.py  bot_reality_check.py  check_10_notification_types.py  check_complete_menu_details.py  check_correct_implementation.py  check_database_reality.py  check_menu_systems.py  check_notification_implementation.py  check_real_working_status.py  check_serviceapi_reality.py  check_v6_menu_implementation.py  check_v6_timeframe_menu.py  check_visual_capabilities.py  complete_telegram_ui_test.py  enhanced_bot_reality_check.py  (+36 more)
ZepixTradingBot-old-v2-main/Trading_Bot/artifacts/: Telegram_UI_Verification_Report.md  Telegram_UI_Verification_Report_Full.md
ZepixTradingBot-old-v2-main/Trading_Bot/assets/: Pasted--Account-Size-Risk-Cap-Briefing-Objective-Mera-goal-hai-ki-trading-me-risk-control-ho-aur-1759862497012_1759862497013.txt  Pasted--NEXT-STEPS-Implementation-Plan-Mujhe-3-NEW-FEATURES-add-karne-padenge-1-Independent-Pri-1759948939964_1759948939965.txt  Pasted--NEXT-STEPS-Implementation-Plan-Mujhe-3-NEW-FEATURES-add-karne-padenge-1-Independent-Pri-1759989529640_1759989529640.txt  Pasted--SL-1-ORIGINAL-User-Approved-Volatility-Table-Lot-Size-by-Account-5-000-0-05-lot-10-0-1760084533897_1760084533898.txt  Pasted--Samajh-gaya-aapki-requirements-Main-point-by-point-analyze-kar-raha-hoon-CURRENT-PR-1759863753161_1759863753162.txt  Pasted--TRADINGVIEW-ALERT-JSON-CODES-1-BIAS-ALERTS-1D-1H-1D-Bullish-Bias--1759819084441_1759819084441.txt  Pasted--TRADINGVIEW-ALERT-JSON-CODES-1-BIAS-ALERTS-1D-1H-1D-Bullish-Bias--1759936828915_1759936828916.txt  Pasted--briefing-developer-Language--1759862031533_1759862031534.txt  Pasted--venv-PS-C-Users-shivamkumar14102801-ZepixTradingBot-old-v2-pwd-Path-C-Users-shivamkum-1759871883344_1759871883345.txt  Pasted--venv-PS-C-Users-shivamkumar14102801-ZepixTradingBot-old-v2-python-version-python-c-impor-1759956912690_1759956912691.txt  Pasted-Percentage-base-Sl-system-without-volatility-FX-Gold-Pairs-Risk-SL-Table-Lot-size--1760079557462_1760079557463.txt  Pasted-Shivam-Kumar-Gupta-08-10-2025-11-33-start-ShivamAlgoBot-08-10-2025-11-33-Zepix-Tradin-1759935517840_1759935517840.txt  Pasted-Shivam-Kumar-Gupta-09-10-2025-02-45-start-ShivamAlgoBot-09-10-2025-02-45-Zepix-Tradin-1760044234253_1760044234254.txt  Pasted-Shivam-Kumar-Gupta-09-10-2025-02-45-start-ShivamAlgoBot-09-10-2025-02-45-Zepix-Tradin-1760074592105_1760074592107.txt  Pasted-ek-error-hai-esko-dekhiye-ShivamAlgoBot-06-10-2025-12-11-Complete-Trend-Matrix-XAUUSD-1759815465516_1759815465517.txt
ZepixTradingBot-old-v2-main/Trading_Bot/config/: base_trends.json  config.json  config.json.bak  config_prod.json  logging_settings.json  notification_preferences.json  settings.json  telegram.json  timeframe_trends.json  trading.json
ZepixTradingBot-old-v2-main/Trading_Bot/data/: profit_chains.json  session_settings.json  stats.json  trading_bot.db-shm  trading_bot.db-wal
ZepixTradingBot-old-v2-main/Trading_Bot/deployment_scripts/: deploy_simple.py
ZepixTradingBot-old-v2-main/Trading_Bot/docs/: PLUGIN_SELECTION_IMPLEMENTATION_REPORT.md  PLUGIN_SELECTION_INTEGRATION_GUIDE.md  PLUGIN_SELECTION_VERIFICATION_CERTIFICATE.md
ZepixTradingBot-old-v2-main/Trading_Bot/scripts/: DEPLOY_AND_TEST_BOT.py  add_diagnostic_commands.py  add_missing_handlers.py  add_send_document.py  auto_deploy_and_test.py  automate_deepseek_scan.py  batch_update_handlers.py  brutal_verification.py  check_imports.py  check_requests.py  check_todays_trades.py  check_tokens.py  complete_final_test.py  comprehensive_test.py  debug_telegram_status.py  deep_scan.py  deep_scan_robust.py  deepseek_deep_reasoning.py  deepseek_segmented_audit.py  deploy_bot_permanent.py  deploy_port_80.py  deploy_vm.ps1  execute_comprehensive_test.py  fix_all_dependency_checks.py  fix_and_start_bot.py  fix_comma.py  fix_logging_indent.py  fix_menu_manager_bug.py  fix_string_literals.py  generate_menu_preview.py  grant_port80_permission.ps1  initialize_v5_databases.py  live_test_with_telegram.py  minimal_test.py  (+41 more)
(+1408 files in other folders)
