# Zepix Trading Bot - Project Configuration
# Version: 5.0.0
# Date: 2026-01-14
#
# This file configures Python tooling for the V5 Hybrid Plugin Architecture.
# Tools: Black, isort, Flake8, MyPy, Pytest

[project]
name = "zepix-trading-bot"
version = "5.0.0"
description = "V5 Hybrid Plugin Architecture Trading Bot with Multi-Strategy Support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "ASG Groups", email = "support@asggroups.com"}
]
keywords = ["trading", "bot", "mt5", "telegram", "forex", "gold"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "python-telegram-bot>=20.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "MetaTrader5>=5.0.45",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://gitlab.com/asggroupsinfo/algo-asggoups-v1"
Documentation = "https://gitlab.com/asggroupsinfo/algo-asggoups-v1/-/tree/main/docs"
Repository = "https://gitlab.com/asggroupsinfo/algo-asggoups-v1"

# ============================================================================
# BLACK - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Directories to exclude
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | data
    | logs
    | docs
    | updates
    | \.venv
    | venv
)/
'''

# ============================================================================
# ISORT - Import Sorter
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["data/*", "logs/*", "docs/*", "updates/*", ".venv/*", "venv/*"]
known_first_party = ["src"]
known_third_party = ["telegram", "fastapi", "uvicorn", "MetaTrader5", "pandas", "numpy"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# MYPY - Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
no_strict_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module overrides for stricter checking on core modules
[[tool.mypy.overrides]]
module = "src.core.*"
disallow_untyped_defs = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "src.telegram.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Ignore third-party modules without stubs
[[tool.mypy.overrides]]
module = [
    "MetaTrader5.*",
    "telegram.*",
    "pyttsx3.*",
]
ignore_missing_imports = true
ignore_errors = true

# ============================================================================
# PYTEST - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "batch01: Batch 01 - Core Plugin System",
    "batch02: Batch 02 - Multi-Database Schema",
    "batch03: Batch 03 - ServiceAPI Layer",
    "batch04: Batch 04 - Multi-Telegram Architecture",
    "batch05: Batch 05 - Telegram UX & Rate Limiting",
    "batch06: Batch 06 - Sticky Headers & Notification Router",
    "batch07: Batch 07 - Shared Service API",
    "batch08: Batch 08 - V3 Combined Logic Plugin",
    "batch09: Batch 09 - Config Hot-Reload & DB Isolation",
    "batch10: Batch 10 - V6 Price Action Plugin",
    "batch11: Batch 11 - Health Monitoring & Versioning",
    "batch12: Batch 12 - Data Migration & Documentation",
    "batch13: Batch 13 - Code Quality & User Docs",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# COVERAGE - Test Coverage
# ============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/data/*",
    "*/logs/*",
    "*/docs/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
precision = 2
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BANDIT - Security Linter
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "data", "logs", "docs", "updates", ".venv", "venv"]
skips = ["B101", "B311"]  # Skip assert and random warnings
targets = ["src"]

# ============================================================================
# FLAKE8 - Linter (Note: flake8 doesn't support pyproject.toml natively)
# Configuration is in .pre-commit-config.yaml and can be added to setup.cfg
# ============================================================================
# Flake8 settings for reference (use setup.cfg or .flake8 file):
# max-line-length = 100
# extend-ignore = E203, E501, W503
# max-complexity = 15
# per-file-ignores = __init__.py:F401
